objects/Lead.object
<CustomObject>
    <fields>
        <fullName>JobDescription__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the Job of a contact.</description>
        <inlineHelpText>Free text to indicate the Job of the contact like appears in this business card</inlineHelpText>
        <label>Job Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JobFunction__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the type of job functionality performed by the Lead.</description>
        <inlineHelpText>Define  the  function  that  the contact performs inside the company like Purchasing, HR, Finance….</inlineHelpText>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Z016</fullName>
                </value>
                <value>
                    <fullName>Z017</fullName>
                </value>
                <value>
                    <fullName>Z018</fullName>
                </value>
                <value>
                    <fullName>Z019</fullName>
                </value>
                <value>
                    <fullName>Z020</fullName>
                </value>
                <value>
                    <fullName>Z021</fullName>
                </value>
                <value>
                    <fullName>Z015</fullName>
                </value>
                <value>
                    <fullName>Z013</fullName>
                </value>
                <value>
                    <fullName>Z022</fullName>
                </value>
                <value>
                    <fullName>Z023</fullName>
                </value>
                <value>
                    <fullName>Z008</fullName>
                </value>
                <value>
                    <fullName>Z036</fullName>
                </value>
                <value>
                    <fullName>Z007</fullName>
                </value>
                <value>
                    <fullName>Z006</fullName>
                </value>
                <value>
                    <fullName>Z004</fullName>
                </value>
                <value>
                    <fullName>Z024</fullName>
                </value>
                <value>
                    <fullName>Z003</fullName>
                </value>
                <value>
                    <fullName>Z025</fullName>
                </value>
                <value>
                    <fullName>Z009</fullName>
                </value>
                <value>
                    <fullName>Z010</fullName>
                </value>
                <value>
                    <fullName>Z026</fullName>
                </value>
                <value>
                    <fullName>Z027</fullName>
                </value>
                <value>
                    <fullName>Z028</fullName>
                </value>
                <value>
                    <fullName>Z001</fullName>
                </value>
                <value>
                    <fullName>Z012</fullName>
                </value>
                <value>
                    <fullName>Z014</fullName>
                </value>
                <value>
                    <fullName>Z029</fullName>
                </value>
                <value>
                    <fullName>Z030</fullName>
                </value>
                <value>
                    <fullName>Z002</fullName>
                </value>
                <value>
                    <fullName>Z031</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JobTitle__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the Job Title of the Lead.</description>
        <inlineHelpText>Job Title are badges of authority, getting the job title  appropriate  to the position can determine the standing of a contact inside a company.
For example, Director, Vice President, Manager, Consultant…..</inlineHelpText>
        <label>Job Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZC</fullName>
                </value>
                <value>
                    <fullName>Z1</fullName>
                </value>
                <value>
                    <fullName>Z3</fullName>
                </value>
                <value>
                    <fullName>ZZ</fullName>
                </value>
                <value>
                    <fullName>ZO</fullName>
                </value>
                <value>
                    <fullName>ZF</fullName>
                </value>
                <value>
                    <fullName>ZG</fullName>
                </value>
                <value>
                    <fullName>ZE</fullName>
                </value>
                <value>
                    <fullName>ZP</fullName>
                </value>
                <value>
                    <fullName>Z2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Keycode__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the campaign keycode and identifies the marcom activity with its unique value.</description>
        <inlineHelpText>A unique identifier for all =S= marcom activities. This keycode is placed on the Marcom activity and is used by the contact to respond. The keycode entered at sereply.com will generate an online response capture form customized for the MarCom activity.</inlineHelpText>
        <label>Keycode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastCallAttemptDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>SEPTEMBER RELEASE - This custom field captures the date of Last Call Attempted.</description>
        <label>Last Call Attempt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastEngagementDate__c</fullName>
        <description>Jul 2014: Populated by Marketo</description>
        <label>Last Engagement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModificationMinusCreationDate__c</fullName>
        <description>This field calculates the difference in days between the Closed date and the creation date. Required for reporting purposes.
This formula has been edited based on EUS-010198</description>
        <formula>IF(NOT(ISNULL(ClosedDate__c)), ClosedDate__c - CreatedDate  , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration to close lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastNameKana__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the Last Name of the Lead only for Japanese contacts.</description>
        <inlineHelpText>For Japanese contacts only</inlineHelpText>
        <label>Last Name Kana</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Program_Success__c</fullName>
        <description>This field is created to store the Last Program Success value that is updated from Marketo</description>
        <label>Last Program Success</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadAge__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field indicates the period of the lead existence.</description>
        <formula>IF(OR(ISPICKVAL(Status, &apos;1 - New&apos;), AND((DATEVALUE(CreatedDate) = LastCallAttemptDate__c),ISPICKVAL(Status,&apos;2 - Working&apos;),ISPICKVAL(SubStatus__c,&apos;Qualified&apos; ))),
CASE( TODAY() - DATEVALUE(CreatedDate),
0,IMAGE(&quot;/resource/Project_Status_Green&quot;,&quot;Green&quot; ,25,25),
1,IMAGE(&quot;/resource/Project_Status_Green&quot;,&quot;Green&quot; ,25,25),
2, IMAGE(&quot;/resource/Project_Status_Green&quot;,&quot;Green&quot; ,25,25),
3,IMAGE(&quot;/resource/STR025_YellowBubble&quot;,&quot;Yellow&quot; ,25,25),
4,IMAGE(&quot;/resource/STR025_YellowBubble&quot;,&quot;Yellow&quot; ,25,25),
IMAGE(&quot;/resource/STR024_RedBubble&quot;,&quot;Red&quot; ,25,25)),
IF(ISPICKVAL(Status,&apos;2 - Working&apos;),
IF(OR( (ISPICKVAL(SubStatus__c, &apos;Call Attempted&apos;)) , AND(DATEVALUE(CreatedDate) &lt;&gt; LastCallAttemptDate__c,ISPICKVAL(SubStatus__c,&apos;Qualified&apos;))), 
CASE(TODAY() - LastCallAttemptDate__c,
0,IMAGE(&quot;/resource/Project_Status_Green&quot;,&quot;Green&quot; ,25,25),
1,IMAGE(&quot;/resource/Project_Status_Green&quot;,&quot;Green&quot; ,25,25),
2, IMAGE(&quot;/resource/Project_Status_Green&quot;,&quot;Green&quot; ,25,25),
3,IMAGE(&quot;/resource/STR025_YellowBubble&quot;,&quot;Yellow&quot; ,25,25),
4,IMAGE(&quot;/resource/STR025_YellowBubble&quot;,&quot;Yellow&quot; ,25,25),
IMAGE(&quot;/resource/STR024_RedBubble&quot;,&quot;Red&quot; ,25,25)),
IF(ISPICKVAL(SubStatus__c,&apos;Callback Requested&apos;), 
IF(ScheduledCallbackDate__c &gt; TODAY(),
IMAGE(&quot;/resource/Project_Status_Green&quot;,&quot;Green&quot; ,25,25),
IF( ScheduledCallbackDate__c =TODAY(),
IMAGE(&quot;/resource/STR025_YellowBubble&quot;,&quot;Yellow&quot; ,25,25),
IMAGE(&quot;/resource/STR024_RedBubble&quot;,&quot;Red&quot; ,25,25))),&apos; &apos;) ),&apos; &apos;))</formula>
        <label>Lead Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MARKETING JUNE Release - Lookup on a Lead Contact</description>
        <label>Lead Contact</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Associated Leads</relationshipLabel>
        <relationshipName>LeadContact2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeadFirstTouchDate__c</fullName>
        <description>R2 2017 Release: This field will capture the timestamp when the lead is interacted for the first time</description>
        <label>Lead First Touch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadQualifiedTime__c</fullName>
        <description>R2 2017 Release: This field will calculate bMA Lead qualified time</description>
        <label>Lead Qualified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores source of the Leads where it comes from.</description>
        <inlineHelpText>The method of entry into the Marketing System; Online, File Upload, Manual Entry</inlineHelpText>
        <label>Lead Source</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadTouchTime__c</fullName>
        <formula>IF( AND($RecordType.DeveloperName = &apos;Lead&apos;, NOT( ISBLANK( LeadQualifiedTime__c ) ) ) , LeadFirstTouchDate__c -  LeadQualifiedTime__c  , LeadFirstTouchDate__c - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Touch Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadType__c</fullName>
        <description>Lead Type Image - March 2016 Release</description>
        <formula>IF(RecordType.DeveloperName = &quot;MarcomLead&quot;, IMAGE(&quot;/resource/1459046115000/LeadTypeIndicator/Marcom_Lead.png&quot;, &quot;Marcom_Lead&quot;),
IF(AND(RecordType.DeveloperName = &quot;NonMarcomLead&quot;,TransactionalLead__c = False), IMAGE(&quot;/resource/1459046115000/LeadTypeIndicator/Non_Marcom_Lead.png&quot;,&quot;Non_Marcom_Lead&quot;),
IF(RecordType.DeveloperName = &quot;Lead&quot;, IMAGE(&quot;/resource/1459046115000/LeadTypeIndicator/bMA_Lead.png&quot;,&quot;Marketo&quot;),
IF(AND(RecordType.DeveloperName = &quot;NonMarcomLead&quot;, TransactionalLead__c = True), IMAGE(&quot;/resource/1459046115000/LeadTypeIndicator/Transactional_lead.png&quot;, &quot;Transactional&quot;),&quot;&quot;))))</formula>
        <label>Lead Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadWorkedByExternalAgent__c</fullName>
        <formula>IF( NOT(ISBLANK(Owner:User.ContactId) ),true, false)</formula>
        <label>Lead Worked By External Agent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <formula>IF( 
  ISBLANK(Owner:Queue.Id),
  Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName,
  Owner:Queue.QueueName
)</formula>
        <label>Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadingBusiness__c</fullName>
        <description>SEPTEMBER RELEASE - This field stores the Leading Business of Lead.</description>
        <label>Leading Business (BU)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>GW</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                    <isActive>false</isActive>
                    <label>GC</label>
                </value>
                <value>
                    <fullName>GS</fullName>
                    <isActive>false</isActive>
                    <label>GS</label>
                </value>
                <value>
                    <fullName>Industry</fullName>
                    <isActive>false</isActive>
                    <label>Industry</label>
                </value>
                <value>
                    <fullName>PE</fullName>
                    <isActive>false</isActive>
                    <label>PE</label>
                </value>
                <value>
                    <fullName>PW</fullName>
                    <isActive>false</isActive>
                    <label>PW</label>
                </value>
                <value>
                    <fullName>SI</fullName>
                    <isActive>false</isActive>
                    <label>SI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadsContacted__c</fullName>
        <description>This field tracks the leads that have been contacted. Required for reporting purposes.</description>
        <formula>IF(OR(ISPICKVAL( SubStatus__c , &quot;Opportunity Created&quot;), 
ISPICKVAL( SubStatus__c , &quot;Qualified &amp; Sold&quot;), 
ISPICKVAL( SubStatus__c , &quot;Existing Opportunity&quot;),
ISPICKVAL( SubStatus__c , &quot;Already Purchased&quot;), 
ISPICKVAL( SubStatus__c , &quot;Currently working with SE Partner&quot;), 
ISPICKVAL( SubStatus__c , &quot;Currently working with SE Rep&quot;), 
ISPICKVAL( SubStatus__c , &quot;No Opportunity&quot;)) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leads Contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadsConvertedOtherCRM__c</fullName>
        <description>This field tracks the leads that have been converted or entered in another CRM. Required for reporting purposes.</description>
        <formula>IF(ISPICKVAL(  Status, &quot;3 - Closed - Opportunity Created&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leads Converted/Other CRM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadsWorked__c</fullName>
        <description>This field tracks the leads that have been worked. Required for reporting purposes.</description>
        <formula>IF(OR(ISPICKVAL( SubStatus__c , &quot;Opportunity Created&quot;),
ISPICKVAL( SubStatus__c , &quot;Qualified &amp; Sold&quot;), 
ISPICKVAL( SubStatus__c , &quot;Existing Opportunity&quot;),
ISPICKVAL( SubStatus__c , &quot;Already Purchased&quot;), 
ISPICKVAL(SubStatus__c , &quot;Currently working with SE Partner&quot;), 
ISPICKVAL(SubStatus__c , &quot;Currently working with SE Rep&quot;), 
ISPICKVAL(SubStatus__c , &quot;No Opportunity&quot;), 
ISPICKVAL( SubStatus__c ,&quot;Call Attempt Limit Met&quot;), 
ISPICKVAL( SubStatus__c , &quot;Refused By Gatekeeper&quot;)), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leads Worked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LegacyCreationDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>SEPTEMBER RELEASE - Stores the created date of the Lead in the Legacy System.</description>
        <label>Legacy Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MALead__c</fullName>
        <description>Maps to Created from MA Lead in Opportunities - Mar16 Release</description>
        <formula>IF(RecordType.DeveloperName = &apos;Lead&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MA Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManuallyCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify if the record was created manually or not.</description>
        <label>Manually Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarcomPrefEmail__c</fullName>
        <description>Jul 2014: Populated by Marketo operational campaign for Unsubscribe</description>
        <label>Email Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarcomType__c</fullName>
        <description>SEPTEMBER RELEASE -  This custom field stores the type of marketing activity the Lead responded to.</description>
        <inlineHelpText>The type of marketing activity the Lead responded to.</inlineHelpText>
        <label>Marcom Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketSegment__c</fullName>
        <description>SR0 - Picklist to store Lead main market segment</description>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BD1</fullName>
                </value>
                <value>
                    <fullName>BD3</fullName>
                </value>
                <value>
                    <fullName>BD4</fullName>
                </value>
                <value>
                    <fullName>BD6</fullName>
                </value>
                <value>
                    <fullName>BD9</fullName>
                </value>
                <value>
                    <fullName>BDR</fullName>
                </value>
                <value>
                    <fullName>BDZ</fullName>
                </value>
                <value>
                    <fullName>EN1</fullName>
                </value>
                <value>
                    <fullName>EN2</fullName>
                </value>
                <value>
                    <fullName>EN3</fullName>
                </value>
                <value>
                    <fullName>ID1</fullName>
                </value>
                <value>
                    <fullName>ID2</fullName>
                </value>
                <value>
                    <fullName>ID3</fullName>
                </value>
                <value>
                    <fullName>ID4</fullName>
                </value>
                <value>
                    <fullName>ID5</fullName>
                </value>
                <value>
                    <fullName>ID6</fullName>
                </value>
                <value>
                    <fullName>ID7</fullName>
                </value>
                <value>
                    <fullName>IDZ</fullName>
                </value>
                <value>
                    <fullName>IT1</fullName>
                </value>
                <value>
                    <fullName>IT2</fullName>
                </value>
                <value>
                    <fullName>IT3</fullName>
                </value>
                <value>
                    <fullName>PW1</fullName>
                </value>
                <value>
                    <fullName>PW3</fullName>
                </value>
                <value>
                    <fullName>ABCD</fullName>
                    <isActive>false</isActive>
                    <label>ABCD</label>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                    <isActive>false</isActive>
                    <label>Accounting</label>
                </value>
                <value>
                    <fullName>Advertising &amp; Marketing</fullName>
                    <isActive>false</isActive>
                    <label>Advertising &amp; Marketing</label>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                    <isActive>false</isActive>
                    <label>Aerospace &amp; Defense</label>
                </value>
                <value>
                    <fullName>Agricultural Services</fullName>
                    <isActive>false</isActive>
                    <label>Agricultural Services</label>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                    <isActive>false</isActive>
                    <label>Agriculture</label>
                </value>
                <value>
                    <fullName>Agriculture, Food &amp; Beverage</fullName>
                    <isActive>false</isActive>
                    <label>Agriculture, Food &amp; Beverage</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketSubSegment__c</fullName>
        <description>October2012</description>
        <label>Market Sub-Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MarketSegment__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Automotive And Apparel Trimmings</fullName>
                    <isActive>false</isActive>
                    <label>Automotive And Apparel Trimmings</label>
                </value>
                <value>
                    <fullName>B14</fullName>
                    <isActive>false</isActive>
                    <label>B14</label>
                </value>
                <value>
                    <fullName>B15</fullName>
                </value>
                <value>
                    <fullName>B16</fullName>
                </value>
                <value>
                    <fullName>B17</fullName>
                </value>
                <value>
                    <fullName>B18</fullName>
                </value>
                <value>
                    <fullName>B19</fullName>
                </value>
                <value>
                    <fullName>B20</fullName>
                </value>
                <value>
                    <fullName>B34</fullName>
                    <isActive>false</isActive>
                    <label>B34</label>
                </value>
                <value>
                    <fullName>B35</fullName>
                    <isActive>false</isActive>
                    <label>B35</label>
                </value>
                <value>
                    <fullName>B36</fullName>
                    <isActive>false</isActive>
                    <label>B36</label>
                </value>
                <value>
                    <fullName>B37</fullName>
                </value>
                <value>
                    <fullName>B38</fullName>
                </value>
                <value>
                    <fullName>B39</fullName>
                </value>
                <value>
                    <fullName>B41</fullName>
                </value>
                <value>
                    <fullName>B42</fullName>
                </value>
                <value>
                    <fullName>B43</fullName>
                </value>
                <value>
                    <fullName>B44</fullName>
                </value>
                <value>
                    <fullName>B45</fullName>
                </value>
                <value>
                    <fullName>B46</fullName>
                </value>
                <value>
                    <fullName>B47</fullName>
                </value>
                <value>
                    <fullName>B48</fullName>
                </value>
                <value>
                    <fullName>B49</fullName>
                </value>
                <value>
                    <fullName>B4A</fullName>
                </value>
                <value>
                    <fullName>B4B</fullName>
                </value>
                <value>
                    <fullName>B55</fullName>
                </value>
                <value>
                    <fullName>B56</fullName>
                </value>
                <value>
                    <fullName>B57</fullName>
                </value>
                <value>
                    <fullName>B90</fullName>
                </value>
                <value>
                    <fullName>B91</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketoLeadUniqueId__c</fullName>
        <description>Lead Unique ID of Marketo - Mar16 Release</description>
        <label>Marketo Lead Unique Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media__c</fullName>
        <description>SEPTEMBER RELEASE - This field Captures the Media of Leads communication.</description>
        <inlineHelpText>Represent the Vehicle through which SE communicates
Examples
–Sweden Print Newsletter for electrical channel
–Facilities Magazine China
When saved it is given an ID which is numeric for NAM and alphanumeric for all other regions.</inlineHelpText>
        <label>Media</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelDecile__c</fullName>
        <description>This field is used as part of the nurturing pilot</description>
        <inlineHelpText>This field is used as part of the nurturing pilot</inlineHelpText>
        <label>Model Decile</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <description>July 2014 Need for Marketo</description>
        <label>Need</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NonMarcommCampaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Non-Marcom Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberOfOpenLeadsOnLeadContactOrContact__c</fullName>
        <description>This field will display the number of open Leads associated with the Lead Contact / Contact</description>
        <formula>IF( LeadContact__c  &lt;&gt; NULL ,   LeadContact__r.TECH_NumberOfOpenLeads__c   , IF( Contact__c  &lt;&gt; NULL ,    Contact__r.TECH_NumberOfOpenLeads__c  , 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Open Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OperationsEnterpriseManagementDoE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mar16 Release - Marketo related fields</description>
        <label>Operations &amp; Enterprise Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityDoesNotExist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field is used to determine if the opportunity need to be created when converting a lead.</description>
        <inlineHelpText>When checked, allows lead conversion without opportunity creation. Opportunity information is not required for conversion in this case.</inlineHelpText>
        <label>Convert Without Opportunity Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityFinder__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field captures the Opportunity Finder for Lead.</description>
        <label>Opportunity Finder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityLevel__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the Opportunity level for a Lead.</description>
        <label>Opportunity Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityScope__c</fullName>
        <description>SEPTEMBER RELEASE - Custom field to store Opportunity Scope.</description>
        <label>Opportunity Line Scope</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OpportunityType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BDADS</fullName>
                </value>
                <value>
                    <fullName>BDBMS</fullName>
                </value>
                <value>
                    <fullName>BDSEC</fullName>
                </value>
                <value>
                    <fullName>BDSL3</fullName>
                </value>
                <value>
                    <fullName>CLSAS</fullName>
                </value>
                <value>
                    <fullName>ESEEP</fullName>
                </value>
                <value>
                    <fullName>ESEPC</fullName>
                </value>
                <value>
                    <fullName>ESMON</fullName>
                </value>
                <value>
                    <fullName>ESSMS</fullName>
                </value>
                <value>
                    <fullName>IDADS</fullName>
                </value>
                <value>
                    <fullName>IDCOM</fullName>
                </value>
                <value>
                    <fullName>IDEUR</fullName>
                </value>
                <value>
                    <fullName>IDFLD</fullName>
                </value>
                <value>
                    <fullName>IDHMI</fullName>
                </value>
                <value>
                    <fullName>IDIBO</fullName>
                </value>
                <value>
                    <fullName>IDMST</fullName>
                </value>
                <value>
                    <fullName>IDOL2</fullName>
                </value>
                <value>
                    <fullName>IDPAC</fullName>
                </value>
                <value>
                    <fullName>IDPAS</fullName>
                </value>
                <value>
                    <fullName>IDPSO</fullName>
                </value>
                <value>
                    <fullName>IDSDS</fullName>
                </value>
                <value>
                    <fullName>IDSEN</fullName>
                </value>
                <value>
                    <fullName>IDSIG</fullName>
                </value>
                <value>
                    <fullName>IDSL3</fullName>
                </value>
                <value>
                    <fullName>IDVSD</fullName>
                </value>
                <value>
                    <fullName>INADS</fullName>
                </value>
                <value>
                    <fullName>INENP</fullName>
                </value>
                <value>
                    <fullName>INENS</fullName>
                </value>
                <value>
                    <fullName>INIBS</fullName>
                </value>
                <value>
                    <fullName>INMCP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>